# autonomous-research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
autonomous_research_analyst/: __init__.py  api.py  cli.py  config.py  graph.py  state.py
autonomous_research_analyst/agents/: __init__.py  extractor.py  gap.py  planner.py  query_planner.py  search.py  task_decomposer.py  verifier.py  writer.py
autonomous_research_analyst/export/: __init__.py  markdown.py  report_json.py
autonomous_research_analyst/providers/: __init__.py  search.py
autonomous_research_analyst/static/: index.html
tests/: test_pipeline.py
